

syntax = "proto3";

package containerd.vminitd.services.bundle.v1;

option go_package = "github.com/spin-stack/spinbox/api/services/bundle/v1;bundle";

// Bundle service manages OCI bundle creation inside the VM.
// This service is exposed by vminitd over vsock to the host shim.
service Bundle {
	// Create creates an OCI bundle from the provided files.
	//
	// The bundle directory is created at /run/spinbox/{namespace}/{id}/
	// and populated with the files from the request (e.g., config.json,
	// hostname, hosts, resolv.conf).
	//
	// Returns:
	//   - INVALID_ARGUMENT: id is empty or files map is empty
	//   - ALREADY_EXISTS: bundle with this id already exists
	//   - INTERNAL: failed to create bundle directory or write files
	rpc Create(CreateRequest) returns (CreateResponse);
}

message CreateRequest {
	// id is the unique identifier for the bundle to create.
	string id = 1;

	// files is a map of filename to file contents.
	// Keys must be simple filenames without path components (e.g., "config.json", "hosts", "resolv.conf").
	// Values are the file contents as raw bytes.
	//
	// SECURITY: The server validates all filenames to prevent attacks:
	//   - Empty filenames are rejected
	//   - Absolute paths (starting with /) are rejected
	//   - Path separators (/ or \) are rejected - only simple filenames allowed
	//   - "." and ".." are rejected
	// Invalid filenames result in INVALID_ARGUMENT error.
	map<string, bytes> files = 2;
}

message CreateResponse {
	// bundle is the absolute path to the created bundle directory on the VM filesystem.
	string bundle = 1;
}
